--- a/public/index.html
+++ b/public/index.html
@@ -4,41 +4,38 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+
+  <meta name="description" content="Welcome to my portfolio! I'm a Full Stack MERN Web Developer with a passion for creating innovative and user-friendly web applications. Explore my projects and skills to see how I can help bring your ideas to life.">
+  <meta name="keywords" content="Full Stack Developer, MERN Stack, Web Developer, MongoDB, Express.js, React.js, Node.js, JavaScript, HTML, CSS, Responsive Design, RESTful APIs, Database Management, Atanu Karmakar developer, Atanu Karmakar Portfolio, Developer Portfolio, Atanu Karmakar">
+
+<meta property="og:title" content="Atanu Karmakar - Full Stack MERN Web Developer Portfolio">
+<meta property="og:description" content="Explore my portfolio to see examples of my work as a Full Stack MERN Web Developer.">
+<meta property="og:image" content="https://atanu8250.github.io/portfolio-profile-pic.png">
+<meta property="og:url" content="https://atanu8250.github.io/">
+<meta property="og:type" content="portfolio website">
+
+<meta name="twitter:card" content="https://atanu8250.github.io/portfolio-profile-pic.png">
+<meta name="twitter:title" content="Atanu Karmakar - Full Stack MERN Web Developer Portfolio">
+<meta name="twitter:description" content="Explore my portfolio to see examples of my work as a Full Stack MERN Web Developer.">
+<meta name="twitter:image" content="https://pbs.twimg.com/profile_images/1750824470699560960/_fbCXQ5f_400x400.jpg">
+<meta name="twitter:creator" content="@Atanu_200">
+
+<meta name="robots" content="index, follow">
+<meta name="author" content="Atanu Karmakar">
+
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>Atanu Karmakar | Aspiring Full Stack Web Developer</title>
+  <title>Atanu Karmakar | Full Stack Web Developer</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
 
 </html>
