Images converted to webp and SEO optimized

--- a/public/index.html
+++ b/public/index.html
@@ -3,38 +3,47 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.webp" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
 
-  <meta name="description" content="Welcome to my portfolio! I'm a Full Stack MERN Web Developer with a passion for creating innovative and user-friendly web applications. Explore my projects and skills to see how I can help bring your ideas to life.">
-  <meta name="keywords" content="Full Stack Developer, MERN Stack, Web Developer, MongoDB, Express.js, React.js, Node.js, JavaScript, HTML, CSS, Responsive Design, RESTful APIs, Database Management, Atanu Karmakar developer, Atanu Karmakar Portfolio, Developer Portfolio, Atanu Karmakar">
+  <meta name="description"
+    content="Showcasing innovative web apps by Atanu Karmakar, Full Stack MERN Developer. Explore projects, skills, and expert web development services tailored to your needs.">
+  <meta name="keywords"
+    content="Full Stack Developer, MERN Developer, Web Development, Innovative Web Apps, User-Friendly Websites, Atanu Karmakar, Custom Web Solutions">
 
-<meta property="og:title" content="Atanu Karmakar - Full Stack MERN Web Developer Portfolio">
-<meta property="og:description" content="Explore my portfolio to see examples of my work as a Full Stack MERN Web Developer.">
-<meta property="og:image" content="https://atanu8250.github.io/portfolio-profile-pic.png">
-<meta property="og:url" content="https://atanu8250.github.io/">
-<meta property="og:type" content="portfolio website">
+  <meta property="og:title" content="Atanu Karmakar | Full Stack MERN Developer | Web Solutions">
+  <meta property="og:description"
+    content="Explore expert web development services and innovative web apps by Atanu Karmakar, Full Stack MERN Developer. Discover projects and skills tailored to your needs.">
+  <meta property="og:image" content="https://atanu8250.github.io/portfolio-profile-pic.webp">
+  <meta property="og:url" content="https://atanu8250.github.io/">
+  <meta property="og:type" content="website">
 
-<meta name="twitter:card" content="https://atanu8250.github.io/portfolio-profile-pic.png">
-<meta name="twitter:title" content="Atanu Karmakar - Full Stack MERN Web Developer Portfolio">
-<meta name="twitter:description" content="Explore my portfolio to see examples of my work as a Full Stack MERN Web Developer.">
-<meta name="twitter:image" content="https://pbs.twimg.com/profile_images/1750824470699560960/_fbCXQ5f_400x400.jpg">
-<meta name="twitter:creator" content="@Atanu_200">
 
-<meta name="robots" content="index, follow">
-<meta name="author" content="Atanu Karmakar">
+  <meta name="twitter:card" content="https://atanu8250.github.io/portfolio-profile-pic.webp">
+  <meta name="twitter:title" content="Atanu Karmakar - Full Stack MERN Web Developer Portfolio">
+  <meta name="twitter:description"
+    content="Discover innovative web apps and expert web development services by Atanu Karmakar. Transform your ideas into reality with user-friendly solutions.">
+  <meta name="twitter:image" content="https://pbs.twimg.com/profile_images/1750824470699560960/_fbCXQ5f_400x400.jpg">
+  <meta name="twitter:creator" content="@Atanu_200">
+
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Atanu Karmakar">
 
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="canonical" href="https://www.atanu8250.github.io/">
 
-  <title>Atanu Karmakar | Full Stack Web Developer</title>
+  <script type="application/ld+json" src="%PUBLIC_URL%/schema.json"></script>
+
+
+  <title>Atanu Karmakar | Full Stack MERN Developer | Web Solutions</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>You need to enable JavaScript to run this app!</noscript>
   <div id="root"></div>
 </body>
 
