Education history and Professional experience added

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#000000" />
 
   <meta name="description"
-    content="Showcasing innovative web apps by Atanu Karmakar, Full Stack MERN Developer. Explore projects, skills, and expert web development services tailored to your needs.">
+    content="Atanu Karmakar, Full Stack MERN Developer, crafts innovative, user-friendly web apps. Explore projects and skills to transform your web ideas into reality.">
   <meta name="keywords"
     content="Full Stack Developer, MERN Developer, Web Development, Innovative Web Apps, User-Friendly Websites, Atanu Karmakar, Custom Web Solutions">
 
