code transfered from CRA to vite ✅

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.webp" />
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.webp" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
@@ -32,11 +32,11 @@
   <meta name="author" content="Atanu Karmakar">
 
 
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-icon" href="/favicon.webp" />
+  <link rel="manifest" href="/manifest.json" />
   <link rel="canonical" href="https://www.atanu8250.github.io/">
 
-  <script type="application/ld+json" src="%PUBLIC_URL%/schema.json"></script>
+  <script type="application/ld+json" src="/schema.json"></script>
 
 
   <title>Atanu Karmakar | Full Stack MERN Developer | Web Solutions</title>
@@ -45,6 +45,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app!</noscript>
   <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
